Fixed new question in FAQ alignment

--- a/front-end/src/components/faq/faq.css
+++ b/front-end/src/components/faq/faq.css
@@ -147,6 +147,7 @@
 
 .new-question {
     display: flex;
+    flex-direction: row;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
